JVMTI profiling changes.  Branch has been merged with trunk at revision 4339 which was in the last few days.  Hence, the large amount of files going back into the repository branch.  Built and tested on win32, linux and solaris.  Made some mods to Netbeans profiler code to interact with JVMTI profiling changes.  Branch has been merged with trunk at revision 4339 which was in the last few days.  Hence, the large amount of files going back into the repository branch.  Built and tested on win32, linux and solaris.  Made some mods to Netbeans profiler code to interact with CVM JVMTI profiler support.  Added jdk6 hprof demo code.  Added popframe and redefineclass functionality to debugger code.  Ran all of the nsk JVMTI tests I had and now it passes all of them except for jdi tests since CVM doesn't have jdi.